View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024295 | Open CASCADE | OCCT:DRAW | public | 2013-10-29 06:51 | 2013-12-19 13:59 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024295: vclose behavior is inconsistent | ||||
Description | For most view management commands view name argument is optional (active view is taken by default) whilst "vclose" requires view name explicitly. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
related to | 0023670 | closed | Support for multiple 3D views |
|
Patch is ready for review in CR24295 branch. |
|
Dear Bugmaster, The code is reviewed. No remarks. Please test. |
|
Dear BugMaster, Branch CR24295 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 16dea315852f816718a1cbf14372764087a7dcdf Number of compiler warnings: occt component : Linux: 322 (323 on master) Windows: 1 (0 on master) New additional warning on Windows platform: http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/job/mnt-CR24295-master_build_occt_windows/1/warnings28Result/? ViewerTest_ViewerCommands.cxx:1082, MSBuild, Priority: Normal 'theDi' : unreferenced formal parameter products component : Linux: 189 (189 on master) Windows: 287 (287 on master) |
|
Dear mkv, trivial warning has been fixed. Complete re-testing is not necessary. |
|
Dear BugMaster, Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: Total MEMORY difference: 355576544 / 356271728 Total CPU difference: 44656.190000001174 / 40671.980000000716 Testing on Windows: Total MEMORY difference: 407384160 / 406499704 Total CPU difference: 28308.828125 / 34773.5 There are not differences in images found by testdiff. |
|
Dear BugMaster, Fixing trivial warning see: SHA-1: 2aed66e75c60ef546687741a82a06bc4e64987cd |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-10-29 06:51 | kgv | New Issue | |
2013-10-29 06:51 | kgv | Assigned To | => kgv |
2013-10-29 06:57 | kgv | Relationship added | related to 0023670 |
2013-10-29 06:58 | kgv | Note Added: 0026311 | |
2013-10-29 06:58 | kgv | Assigned To | kgv => apl |
2013-10-29 06:58 | kgv | Status | new => resolved |
2013-10-29 07:32 | kgv | Severity | minor => trivial |
2013-10-29 07:58 |
|
Note Added: 0026312 | |
2013-10-29 07:58 |
|
Assigned To | apl => bugmaster |
2013-10-29 07:58 |
|
Status | resolved => reviewed |
2013-10-29 09:39 |
|
Assigned To | bugmaster => mkv |
2013-10-29 11:56 |
|
Note Added: 0026321 | |
2013-10-29 11:56 |
|
Assigned To | mkv => kgv |
2013-10-29 11:56 |
|
Status | reviewed => assigned |
2013-10-29 12:12 | kgv | Note Added: 0026323 | |
2013-10-29 12:12 | kgv | Assigned To | kgv => mkv |
2013-10-29 12:12 | kgv | Status | assigned => resolved |
2013-10-29 12:12 | kgv | Status | resolved => reviewed |
2013-10-30 08:20 |
|
Note Added: 0026346 | |
2013-10-30 08:32 |
|
Note Added: 0026347 | |
2013-10-30 08:33 |
|
Test case number | => Not needed |
2013-10-30 08:33 |
|
Assigned To | mkv => bugmaster |
2013-10-30 08:33 |
|
Status | reviewed => tested |
2013-11-06 11:07 | bugmaster | Changeset attached | => occt master d0cc1cb7 |
2013-11-06 11:07 | bugmaster | Status | tested => verified |
2013-11-06 11:07 | bugmaster | Resolution | open => fixed |
2013-12-19 13:51 | bugmaster | Status | verified => closed |
2013-12-19 13:59 | bugmaster | Fixed in Version | => 6.7.0 |