0024295: vclose behavior is inconsistent

Process vclose on active view when executed without arguments
Fix trivial warning